# diffres

./: Cargo.toml  README.md
examples/: config.rs
fixtures/: test.yml
src/: config.rs  lib.rs
